代码优化，使用MapUtil代替CollUtil对Map进行判空